appId: com.fastpay.agent
---
- launchApp
- runFlow:
    file: "../../flows/login_helper.yaml" # Adjust relative path to point to your login_helper location
    env:
      User: "6600000185"
      Password: "Password100@11" # The correct password
- copyTextFrom:
    id: "tvAmountFastPay"
- evalScript: ${output.overBalance = Number(maestro.copiedText.replace(/[^0-9.]/g, '')) + 5000.0}

- assertVisible:
    id: menuWithdrawIcon
- tapOn:
    id: btnSendMoney
- assertVisible:
    id: toolbarNavContainer
- runFlow:
    file: "../../flows/Verify_Sell_Balance_Screen_Appears.yaml"
    env:
      User: "7507507501" # Valid user targeting the Over-Balance rule
      Amount: ${output.overBalance}

# 6. Assert and handle the error dialog state for Insufficient Funds
- assertVisible:
    id: "dialogCardView"
# - assertVisible: Sorry! You do not have sufficient amount to transfer
- tapOn: "TRY AGAIN"
- tapOn:
    id: ivHome
- runFlow: ../../flows/Tear_down.yaml
- stopApp