appId: com.fastpay.agent
tags:
  - smoke
  - regression
  - P0
  - Functional
---
- launchApp
- runFlow:
    file: "../../flows/login_helper.yaml" # Adjust relative path to point to your login_helper location
    env:
      User: "6600000185" # The invalid phone number
      Password: "Password100@11" # The correct password
# --- Step 1: Capture Initial Balance ---
- copyTextFrom:
    id: "tvAmountFastPay"
- evalScript: ${output.Before_Balance = Number(maestro.copiedText.replace(/[^0-9.]/g, ''))}

- tapOn:
    id: btnSendMoney
- assertVisible:
    id: toolbarNavContainer
- assertVisible: SELL BALANCE
#Test Page header navigation

#Fastpay Logo
- assertVisible:
    id: ivHome
- tapOn:
    id: ivHome
- assertVisible:
    id: profileLeft
- tapOn:
    id: menuWithdrawIcon
#Notification
- runFlow: ../../flows/Notification_Button_Test.yaml

#Back Button
- assertVisible:
    id: ivBack
- tapOn:
    id: ivBack
- assertVisible:
    id: constraintLayout3
- tapOn:
    id: menuWithdrawIcon
#Main Body
- assertVisible: Enter customer account number
- assertVisible:
    id: countyCodeLayout
- assertVisible: Mobile Number
- assertVisible:
    id: imgScan
- tapOn:
    id: imgScan
- runFlow:
    when:
      visible: "Allow FastpayAgent to take pictures and record video?"
    commands:
      - tapOn: "While using the app"
- tapOn:
    id: ivClose
- runFlow:
    file: "../../flows/Verify_Sell_Balance_Screen_Appears.yaml" # Adjust relative path to point to your login_helper location
    env:
      User: "7507507501"
      Amount: "255"

- copyTextFrom:
    id: "tvTotal"
- evalScript: ${output.total_Balance = Number(maestro.copiedText.replace(/[^0-9.]/g, ''))}

- assertVisible: PROCEED
- tapOn:
    id: dialogProceedBtn
- runFlow: ../../flows/Pin_Helper.yaml
- tapOn:
    id: dialogCardView
- assertVisible:
    id: btnRight
- tapOn:
    id: dialogConfirmBtn
- assertVisible:
    id: nav_host_dashboard
- assertVisible:
    id: toolbarNavContainer
- tapOn:
    id: tvInvoicePhoneNo
- assertVisible:
    id: llReportAProblem
- tapOn:
    id: ivHome

- waitForAnimationToEnd

- copyTextFrom:
    id: "tvAmountFastPay"
- evalScript: ${output.After_Balance = Number(maestro.copiedText.replace(/[^0-9.]/g, ''))}
#cannot excute because of issue from mobile end

# - assertTrue: ${ Math.round(output.After_Balance) == Math.round(output.Before_Balance - output.total_Balance) }
- runFlow: ../../flows/Tear_down.yaml
- stopApp
