appId: com.fastpay.agent
---
- launchApp

- runFlow:
    file: "../../flows/login_helper.yaml" # Adjust relative path to point to your login_helper location
    env:
      User: "6600000185"
      Password: "Password100@11" # The correct password
- tapOn:
    id: menuTransferMoneyIcon
- assertVisible: TRANSFER MONEY
- assertVisible: Recent contacts
- assertVisible:
    id: recipient_root_view
- assertVisible: Mobile Number
- runFlow:
    file: "../../flows/Verify_TransferBalance.yaml" # Adjust relative path to point to your login_helper location
    env:
      User: "1000000066"
      Amount: "255"
- assertVisible: Sorry! The sender and the receiver are not from the same city.
- tapOn: TRY AGAIN
- tapOn:
    id: ivHome
- runFlow: ../../flows/Tear_down.yaml
- stopApp
