appId: com.fastpay.agent
---
- tapOn: Mobile Number
- eraseText
- inputText: ${User}
- assertVisible:
    id: customEditTextEndImageView
- tapOn:
    id: tvMoneyAmount
- eraseText
- inputText: ${Amount}
- assertVisible:
    id: ivIncrement
- tapOn:
    id: ivIncrement
- assertVisible:
    id: ivDecrement
- tapOn:
    id: ivDecrement
# - tapOn:
#     id: input_method_nav_back
- tapOn: CONFIRM
