appId: com.fastpay.agent
---
- assertVisible: Mobile Number
- tapOn: "Mobile Number"
- inputText: ${User}
- tapOn:
    id: tvMoneyAmount
- eraseText
- inputText: ${Amount}
- assertVisible:
    id: ivIncrement
- tapOn:
    id: ivIncrement
- assertVisible:
    id: ivDecrement
- tapOn:
    id: ivDecrement
# - tapOn:
#     id: input_method_nav_back
- tapOn: CONFIRM
